2007-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-revision-completion-table): Temporarily comment
	out.

2007-07-24  Alan Mackenzie  <acm@muc.de>

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer): initialise
	byte-compile-unresolved-functions before rather than after a
	compilation.
	(byte-compile-unresolved-functions): Amplify doc string.

2007-07-24  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-tex.el (cal-tex-holidays, cal-tex-diary)
	(cal-tex-rules, cal-tex-buffer, cal-tex-24)
	(cal-tex-cursor-month-landscape, cal-tex-cursor-month)
	(cal-tex-cursor-week, cal-tex-cursor-week2)
	(cal-tex-cursor-week-iso, cal-tex-week-hours)
	(cal-tex-cursor-week-monday, cal-tex-weekly4-box)
	(cal-tex-cursor-filofax-2week, cal-tex-cursor-filofax-week)
	(cal-tex-cursor-filofax-daily, cal-tex-daily-page): Doc fix.

2007-07-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs.el (cvs-temp-buffer): Disable undo in temp buffers.

2007-07-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ses.el (ses-cleanup): Prevent Emacs from spuriously checking if the
	underlying file is uptodate.

2007-07-23  Richard Stallman  <rms@gnu.org>

	* progmodes/octave-inf.el (inferior-octave-prompt): Accept .exe.

2007-07-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-font-lock-backslash-quote)
	(sh-font-lock-flush-syntax-ppss-cache): New funs.
	(sh-font-lock-syntactic-keywords): Use them to distinguish the
	different possible cases for \'.
	(sh-font-lock-paren): Mark the relevant text with font-lock-multiline.

	* vc-hooks.el (vc-find-root): Walk up the tree to find an existing
	`file' from which to start the search and fix case where `file' is the
	current directory and the root as well.

	* pcvs.el (cvs-mode-add-change-log-entry-other-window): Use a directory
	name for buffer-file-name if it refers to a directory.

2007-07-22  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el (set-default-process-coding-system): Use dos line ends